crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__modifiers__tests__variance_and_vararg_modifiers.snap
---
source: crates/kotlin-syntax/src/parser/grammar/modifiers.rs
expression: out
---
StartNode(MODIFIER_LIST)
AddToken
AddToken
AddToken
AddToken
AddToken
AddToken
FinishNode
